# RVSG

./: README.md  environment.yaml
generatedWorld/: map.yaml
output/: best_worst_dtw.csv  best_worst_dtw_all_route.csv  best_worst_statistic.csv  best_worst_statistic_all_route.csv  best_worst_std.csv  best_worst_std_all_route.csv  check.py  input_messages.json  merged_all_route_std_statistic.csv  merged_avg_requirement_result.csv  merged_avg_result.csv  merged_log.csv  merged_std_statistic.csv
output/best_scenario/: dtw.csv  dtw_all_route.csv  std_all_route.csv
output/distance/route_1/: avg_result.csv  distance_memory_gpt-4.1-2025-04-14.json  result_distance.txt  result_distance_high_diversity.txt  result_distance_simulation_diversity.txt  result_sentence_similarity.txt
output/distance/route_2/: avg_result.csv  distance_memory_gpt-4.1-2025-04-14.json  result_distance.txt  result_distance_high_diversity.txt  result_distance_simulation_diversity.txt  result_sentence_similarity.txt
output/distance/route_3/: avg_result.csv  distance_memory_gpt-4.1-2025-04-14.json  result_distance.txt  result_distance_high_diversity.txt  result_distance_simulation_diversity.txt  result_sentence_similarity.txt
output/distance/route_4/: avg_result.csv  (+5 more)
output/worst_scenario/: dtw.csv  dtw_all_route.csv  std_all_route.csv
src/hunav_sim/: README.md
src/test_hunav/: CMakeLists.txt  cmake_.txt  package.xml
src/test_hunav/launch/: test_hunav.launch.py
src/test_hunav/src/: HuNavPlugin.cpp  WorldGenerator.cpp
src/test_pal_robotics/: package.xml  setup.cfg  setup.py
(+4601 files in other folders)
