<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_hunav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="complexse25@todo.todo">complexse25</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hunav_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>tinyxml2_vendor</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>pal_gazebo_plugins</exec_depend>
  <exec_depend>pal_gazebo_worlds</exec_depend>
  <exec_depend>omni_base_2dnav</exec_depend>
  <exec_depend>omni_base_bringup</exec_depend>
  <exec_depend>omni_base_description</exec_depend>
  <exec_depend>omni_base_gazebo</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
